Change image height to 80vh to ensure text below is immediately visible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ nav {
 }
 
 #homepage img {
-    height: fit-content;
+    height: 80vh;
 }
 
 #info {
